Source/Core/Source/System/TPExec20120313/src/TERM9.BAS


Declare Function terM9_fetchChannelState Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, detectorState As Long, deskewRelay As Long, overTemperature As Integer, referenceOverload As Integer) As Long

Declare Function terM9_fetchPatternClutchState Lib "terM9_32.dll" (ByVal vi As Long, state As Long) As Long

Declare Function terM9_fetchSystemClutchState Lib "terM9_32.dll" (ByVal vi As Long, state As Long) As Long

Declare Function terM9_fetchHighVoltagePinGroupState Lib "terM9_32.dll" (ByVal vi As Long, ByVal stateMaxCount As Long, stateCount As Long, state As Long) As Long

Declare Function terM9_fetchHighVoltagePinState Lib "terM9_32.dll" (ByVal vi As Long, ByVal HVPinIdx As Long, state As Long) As Long

Declare Function terM9_fetchDynamicPatternSetResult Lib "terM9_32.dll" (ByVal vi As Long, patternSetResult As Long, resultCount As Long, lastResultIdx As Long) As Long

Declare Function terM9_fetchDynamicPatternSetState Lib "terM9_32.dll" (ByVal vi As Long, loopState As Long, runState As Long, learnedPastLimit As Integer, lastPatternValid As Integer, stoppedOnFail As Integer, stoppedOnEvent As Integer, stoppedOnProbe As Integer, stoppedOnLSEQHalt As Integer, stoppedOnPattern As Integer, stoppedOnPatternIdx As Long) As Long

Declare Function terM9_fetchDynamicFailures Lib "terM9_32.dll" (ByVal vi As Long, ByVal resultIdx As Long, ByVal pinListMaxCount As Long, pinListCount As Long, pinList As Long, pinOpcodeList As Long) As Long

Declare Function terM9_fetchDynamicPatternResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal initResultIdx As Long, ByVal resultCount As Long, resultsCount As Long, results As Long, patternIndexes As Long) As Long

Declare Function terM9_fetchPassingDynamicPatternResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal initResultIdx As Long, ByVal resultCount As Long, resultIndexesCount As Long, resultIndexes As Long, patternIndexes As Long) As Long

Declare Function terM9_fetchFailingDynamicPatternResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal initResultIdx As Long, ByVal resultCount As Long, resultIndexesCount As Long, resultIndexes As Long, patternIndexes As Long) As Long

Declare Function terM9_fetchDynamicPinResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal initResultIdx As Long, ByVal resultCount As Long, resultListCount As Long, resultList As Long) As Long

Declare Function terM9_fetchPassingDynamicPinResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal initResultIdx As Long, ByVal resultCount As Long, passingPinListCount As Long, passingPinList As Long) As Long

Declare Function terM9_fetchFailingDynamicPinResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal initResultIdx As Long, ByVal resultCount As Long, failingPinListCount As Long, failingPinList As Long) As Long

Declare Function terM9_fetchStaticPatternResult Lib "terM9_32.dll" (ByVal vi As Long, result As Long) As Long

Declare Function terM9_fetchStaticFailures Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListMaxCount As Long, pinListCount As Long, pinList As Long, pinStateList As Long) As Long

Declare Function terM9_fetchStaticPinResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, resultListCount As Long, resultList As Long) As Long

Declare Function terM9_fetchPassingStaticPinResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, passingPinListCount As Long, passingPinList As Long) As Long

Declare Function terM9_fetchFailingStaticPinResults Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, failingPinListCount As Long, failingPinList As Long) As Long

Declare Function terM9_fetchProbeDetectData Lib "terM9_32.dll" (ByVal vi As Long, ByVal initStepIdx As Long, ByVal stepCount As Long, detectData As Long) As Long

Declare Function terM9_fetchProbeMapData Lib "terM9_32.dll" (ByVal vi As Long, ByVal mapDataMaxCount As Long, mapDataCount As Long, mapData As Long) As Long

Declare Function terM9_fetchProbeSettings Lib "terM9_32.dll" (ByVal vi As Long, probeMode As Long, probeConfig As Long, staticCapture As Long, executeMode As Long) As Long

Declare Function terM9_prepareDynamicProbeExecution Lib "terM9_32.dll" (ByVal vi As Long, ByVal executeMode As Long) As Long

Declare Function terM9_fetchDynamicProbeResult Lib "terM9_32.dll" (ByVal vi As Long, result As Long) As Long

Declare Function terM9_fetchDynamicProbeFailingDatatype Lib "terM9_32.dll" (ByVal vi As Long, failingDataType As Long) As Long

Declare Function terM9_fetchDynamicProbeFailingStep Lib "terM9_32.dll" (ByVal vi As Long, failingStep As Long) As Long

Declare Function terM9_fetchDynamicProbePatternCount Lib "terM9_32.dll" (ByVal vi As Long, patternCount As Long) As Long

Declare Function terM9_fetchDynamicProbeStepCount Lib "terM9_32.dll" (ByVal vi As Long, stepCount As Long) As Long

Declare Function terM9_prepareStaticProbeExecution Lib "terM9_32.dll" (ByVal vi As Long, ByVal executeMode As Long, ByVal staticCapture As Long) As Long

Declare Function terM9_fetchStaticProbeResult Lib "terM9_32.dll" (ByVal vi As Long, result As Long) As Long

Declare Function terM9_fetchStaticProbeFailingDatatype Lib "terM9_32.dll" (ByVal vi As Long, failingDataType As Long) As Long

Declare Function terM9_fetchStaticProbeFailingStep Lib "terM9_32.dll" (ByVal vi As Long, failingStep As Long) As Long

Declare Function terM9_fetchStaticProbePatternCount Lib "terM9_32.dll" (ByVal vi As Long, patternCount As Long) As Long

Declare Function terM9_fetchStaticProbeStepCount Lib "terM9_32.dll" (ByVal vi As Long, stepCount As Long) As Long

Declare Function terM9_stopForFailure Lib "terM9_32.dll" (ByVal vi As Long, ByVal stopForFailure As Integer) As Long

Declare Function terM9_stopAtPattern Lib "terM9_32.dll" (ByVal vi As Long, ByVal patternIdx As Long, ByVal stopAtPattern As Integer) As Long

Declare Function terM9_selfTest Lib "terM9_32.dll" (ByVal vi As Long, testResult As Long, ByVal testMessage As String) As Long
Declare Function terM9_self_test Lib "terM9_32.dll" (ByVal vi As Long, testResult As Long, ByVal testMessage As String) As Long

Declare Function terM9_executeDiagnosticSelfTest Lib "terM9_32.dll" (ByVal vi As Long, testResult As Long, ByVal testMessage As String) As Long

Declare Function terM9_errorQuery Lib "terM9_32.dll" (ByVal vi As Long, errorcode As Long, ByVal errorMessage As String) As Long
Declare Function terM9_error_query Lib "terM9_32.dll" (ByVal vi As Long, errorcode As Long, ByVal errorMessage As String) As Long

Declare Function terM9_errorMessage Lib "terM9_32.dll" (ByVal vi As Long, ByVal statusCode As Long, ByVal Message As String) As Long
Declare Function terM9_error_message Lib "terM9_32.dll" (ByVal vi As Long, ByVal statusCode As Long, ByVal Message As String) As Long

Declare Function terM9_revisionQuery Lib "terM9_32.dll" (ByVal vi As Long, ByVal driverRev As String, ByVal instrRev As String) As Long
Declare Function terM9_revision_query Lib "terM9_32.dll" (ByVal vi As Long, ByVal driverRev As String, ByVal instrRev As String) As Long

Declare Function terM9_initializeInstrument Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_reset Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_resetHighVoltagePins Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_resetProbe Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_executeSystemAlignment Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long) As Long

Declare Function terM9_executeChannelAlignment Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long) As Long

Declare Function terM9_executeSyncResourceAlignment Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long) As Long

Declare Function terM9_executeUserClockAlignment Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long) As Long

Declare Function terM9_executeProbeAlignment Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long) As Long

Declare Function terM9_fetchSystemAlignmentResult Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long, ByVal alignmentMessage As String) As Long

Declare Function terM9_fetchChannelAlignmentResult Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long, ByVal alignmentMessage As String) As Long

Declare Function terM9_fetchSyncResourceAlignmentResult Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long, ByVal alignmentMessage As String) As Long

Declare Function terM9_fetchUserClockAlignmentResult Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long, ByVal alignmentMessage As String) As Long

Declare Function terM9_fetchProbeAlignmentResult Lib "terM9_32.dll" (ByVal vi As Long, alignmentResult As Long, ByVal alignmentMessage As String) As Long

Declare Function terM9_getSystemInformation Lib "terM9_32.dll" (ByVal vi As Long, ByVal systemDesc As String, cardCount As Long, channelCount As Long) As Long

Declare Function terM9_getCardInformation Lib "terM9_32.dll" (ByVal vi As Long, ByVal cardIdx As Long, cardId As Long, ByVal cardName As String, boardCount As Long, chanCount As Long, chassis As Long, slot As Long, ByVal addlInfo As String) As Long

Declare Function terM9_getBoardInformation Lib "terM9_32.dll" (ByVal vi As Long, ByVal cardIdx As Long, ByVal boardIdx As Long, boardId As Long, ByVal boardNum As String, ByVal boardName As String, ByVal boardRev As String, ByVal boardSerial As String, ByVal addlInfo As String) As Long

Declare Function terM9_getChannelInformation Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, cardIdx As Long, ChannelNumber As Long, channelIdx As Long) As Long

Declare Function terM9_getLastPatternIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, lastPatternIdx As Long) As Long

Declare Function terM9_getLastResultIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, lastResultIdx As Long) As Long

Declare Function terM9_getLastTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, lastTSETIdx As Long) As Long

Declare Function terM9_getLastPhaseIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, lastPhaseIdx As Long) As Long

Declare Function terM9_getLastWindowIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, lastWindowIdx As Long) As Long

Declare Function terM9_getLastLevelIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, lastLevelIdx As Long) As Long

Declare Function terM9_getLastProbeTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Long, lastPSETIdx As Long) As Long

Declare Function terM9_getLastFrontPanelSyncResourceIndex Lib "terM9_32.dll" (ByVal vi As Long, lastSyncResourceIdx As Long) As Long

Declare Function terM9_getLastStepIndex Lib "terM9_32.dll" (ByVal vi As Long, lastStepIdx As Long) As Long

Declare Function terM9_getLastHighVoltagePinIndex Lib "terM9_32.dll" (ByVal vi As Long, lastHVPinIdx As Long) As Long

Declare Function terM9_getLastUserClockIndex Lib "terM9_32.dll" (ByVal vi As Long, lastUserClockIdx As Long) As Long

Declare Function terM9_getInterruptHandler Lib "terM9_32.dll" (ByVal vi As Long, interruptHandler As Long) As Long

Declare Function terM9_setInterruptHandler Lib "terM9_32.dll" (ByVal vi As Long, ByVal interruptHandler As Long) As Long

Declare Function terM9_wait Lib "terM9_32.dll" (ByVal vi As Long, ByVal waittime As Double) As Long

Declare Function terM9_setTimer Lib "terM9_32.dll" (ByVal vi As Long, ByVal waittime As Double) As Long

Declare Function terM9_startTimer Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_waitForTimer Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_testTimer Lib "terM9_32.dll" (ByVal vi As Long, timerDone As Integer) As Long

Declare Function terM9_stopTimer Lib "terM9_32.dll" (ByVal vi As Long) As Long
